UCF-APR2.4/ftr main/force-app/main/default/objects/Quote_Products__c/Quote_Products__c.object-meta.xml
<CustomObject>
    <label>Quote Products</label>
    <nameField>
        <label>Quote Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>