UCF-APR2.4/ftr main/force-app/main/default/objects/Quote_Products__c/fields/Allocated_Total_Capex1__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Total_Capex1__c</fullName>
    <label>Allocated Total Capex1</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>