UCF-APR2.4/ftr main/force-app/main/default/objects/Quote_Products__c/fields/AT_T_MRC__c.field-meta.xml
<CustomField>
    <fullName>AT_T_MRC__c</fullName>
    <label>AT&amp;T MRC</label>
    <length>11</length>
    <type>Text</type>
</CustomField>