UCF-APR2.4/ftr main/force-app/main/default/objects/Quote_Products__c/fields/CIAC__c.field-meta.xml
<CustomField>
    <fullName>CIAC__c</fullName>
    <label>CIAC</label>
    <length>11</length>
    <type>Text</type>
</CustomField>