UCF-APR2.4/ftr main/force-app/main/default/objects/Quote_Products__c/fields/Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Type__c</fullName>
    <label>Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Bundled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>